# stain2stain

./: pyproject.toml  requirements.txt
configs/: train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: class_conditional_he_amyloid.yaml  paired_data.yaml  paired_data_he_amyloid.yaml  paired_data_mask_he_amyloid.yaml  paired_data_multiclass_seg_mask.yaml  paired_pos_neg_he_amyloid.yaml
configs/experiment/: any2any_he_amyloid.yaml  he2ihc_CF_new_data.yaml  he2ihc_he_amyloid.yaml  he2ihc_masked_amyloid.yaml  he2ihc_masked_amyloid_ROI.yaml  he2ihc_masked_conditioned.yaml  he2ihc_pos_neg_amyloid.yaml  multitask_he2ihc_amyloid.yaml  multitask_he2ihc_gray_matter.yaml
configs/experiment/gray_matter/: simple_flow_matching.yaml
configs/logger/: wandb.yaml
configs/model/: class_conditional_flow_matching.yaml  conditional_flow_matching.yaml  conditional_flow_matching_ROI.yaml  conditional_flow_matching_mask_toggeling.yaml  conditional_flow_matching_masked.yaml  conditional_flow_matching_masked_condition.yaml  conditional_flow_matching_multitask.yaml  conditional_flow_matching_multitask_multiclass.yaml
notebooks/: eda.ipynb  infer_any2any.ipynb
src/: infer_multitask_multiclassloss.py  infer_simple_flowmatching.py  train.py
src/data/: class_conditional_he_amyloid.py  paired_data_he_amyloid.py  paired_data_mask_he_amyloid.py  paired_data_module.py  paired_data_multiclassmask.py  paired_postive_negative_data_he_amyloid.py
src/models/: ___conditional_flow_matching_masked.py  class_conditional_flow_matching.py  conditional_flow_matching.py  conditional_flow_matching_ROI_loss.py  conditional_flow_matching_conditional_mask.py  conditional_flow_matching_conditional_toggle_mask.py  conditional_flow_matching_masked.py  conditional_flow_matching_multitask.py  conditional_flow_matching_multitask_multiclassloss.py
src/models/components/: segmentation_unet.py  shared_encoder.py  task_decoders.py  unet_4to3.py
