[project]
name = "stain2stain"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "wandb>=0.18.0,<0.19.0",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
