[project]
name = "stain2stain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    # Hydra
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    # Logging and utilities
    "wandb>=0.18.0,<0.19.0",
    "loguru>=0.7.3",
    "rich>=13.0.0",
    # Data processing
    "opencv-python>=4.12.0.88",
    "numpy",
    "pandas",
    "pillow",
    # Notebooks
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    # Development
    "pytest>=7.0",
    "pre-commit>=3.0",
    # Project-specific
    "rootutils",
    "torchcfm",
    "torchdyn",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
